# logger

./: cargo.toml
logger_log/: Cargo.toml
logger_log/src/: lib.rs
logger_reader/: Cargo.toml
logger_reader/src/: main.rs
logger_reader/src/support/: clipboard.rs  mod.rs
